broke up html into react components

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello React</title>
 </head>
 <body>
   <div id="react-root"></div>
   <script src="/build/bundle.js"></script>
-</body>
+  
+<nav class="navbar">
+  <a href="/" class="navbar-brand">Chatty</a>
+</nav>
+
 </html>
