separated messages and notifications, added counter for online users

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  
+
   <head>
       <meta charset="UTF-8">
   </head>
@@ -8,8 +8,8 @@
     <div id="react-root"></div>
     <script src="/build/bundle.js"></script>
 
-    <nav class="navbar">
+    <!-- <nav class="navbar">
       <a href="/" class="navbar-brand">Chatty</a>
-    </nav>
+    </nav> -->
 
 </html>
